feat: agregar sistema de storage y logging
- Sistema de storage flexible con abstracción (Local/S3)
  - Implementación LocalStorage para desarrollo
  - Preparado para S3Storage (producción)
  - Validación de tipos MIME y tamaños máximos
  - Organización de archivos por fecha y carpetas
  - Nombres únicos con UUID

- Sistema de logging con Winston
  - Logs organizados por día (error, combined, exceptions, rejections)
  - Rotación automática y compresión de archivos antiguos
  - Retención configurable (30 días por defecto)
  - Middleware de logging de requests HTTP
  - Integración con error handler

- APIs de archivos
  - POST /api/v1/files/upload - Subir un archivo
  - POST /api/v1/files/upload-multiple - Subir múltiples archivos
  - DELETE /api/v1/files/:path - Eliminar archivo
  - GET /api/v1/files/info - Información de tipos permitidos

- Variables de entorno agregadas
  - STORAGE_TYPE, STORAGE_LOCAL_PATH, STORAGE_LOCAL_URL
  - AWS_S3_* (para futuro uso con S3)
  - LOG_LEVEL, LOG_DIR

- Documentación actualizada
  - README.md con secciones de storage y logging
  - .env.example con todas las variables
  - .gitignore actualizado (uploads/, logs/)

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,10 @@ node_modules/.prisma/
 # ============================================
 # LOGS
 # ============================================
+# Archivos de log generados por el sistema de logging
 logs/
 *.log
+*.log.gz
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -183,3 +185,10 @@ tramp
 .dynamodb/
 .tern-port
 .vscode-test
+
+# ============================================
+# ARCHIVOS SUBIDOS (STORAGE)
+# ============================================
+# Carpeta donde se almacenan los archivos subidos por los usuarios
+uploads/
+*.upload
